syntax = "proto3";

package core;

service RelayService {
    rpc Command(CommandRequest) returns (CommandResponse) {}
}

message File {
    string file_name = 1;
    bytes data = 2; // The actual data of the source code file.
}

message Directory {
    string name = 1;
    repeated File files = 2;
    repeated Directory directories = 3;
}

message CommandRequest {
    string command = 1;
    repeated string arguments = 2;
    Directory directory = 3; // represents the root dir (cwd)
}

message CommandResponse {
    string output = 1;
    int64 exit_code = 2;
}
